# GameOfLife

./: CMakeLists.txt  Command.cpp  Command.h  Field.cpp  Field.h  Parser.cpp  Parser.h  README.md  main.cpp
